unpackaged/main/default/objects/Contact/fields/Default_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Billing Contact</label>
    <type>Checkbox</type>
</CustomField>