unpackaged/main/default/objects/Contact/fields/Default_Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Shipping_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Shipping Contact</label>
    <type>Checkbox</type>
</CustomField>