unpackaged/main/default/objects/Contact/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <description>Checks if the contact is either default shipping or default billing</description>
    <formula>Default_Shipping_Contact__c  || Default_Billing_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>