unpackaged/main/default/objects/Contact/fields/PhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>PhoneExtension__c</fullName>
    <label>PhoneExtension</label>
    <length>30</length>
    <type>Text</type>
</CustomField>