unpackaged/main/default/objects/Contact/fields/SalesforceId18__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesforceId18</label>
    <type>Text</type>
</CustomField>