unpackaged/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where did this contact come from</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>