unpackaged/main/default/objects/Contact/fields/SourceContactId__c.field-meta.xml
<CustomField>
    <fullName>SourceContactId__c</fullName>
    <externalId>true</externalId>
    <label>SourceContactId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>