unpackaged/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username previously set in Varcommerce</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>