unpackaged/main/default/objects/Contact/fields/Varcom_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Varcom_Contact_ID__c</fullName>
    <label>Varcom Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>