unpackaged/main/default/objects/Contact/fields/VarcomActive__c.field-meta.xml
<CustomField>
    <fullName>VarcomActive__c</fullName>
    <description>Was this Contact marked as Active in Varcommerce</description>
    <label>VarcomActive</label>
    <length>30</length>
    <type>Text</type>
</CustomField>