unpackaged/main/default/objects/Contact/fields/VarcomSiteStoreAccess__c.field-meta.xml
<CustomField>
    <fullName>VarcomSiteStoreAccess__c</fullName>
    <description>Does this contact have SiteStore access on Varcommerce</description>
    <label>VarcomSiteStoreAccess</label>
    <length>30</length>
    <type>Text</type>
</CustomField>